--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<div class="center jumbotron">
+  <h1>Welcome to Vegas Volunteer</h1>
 
-<h1>Vegas Volunteer</h1>
-<p>This is the Home page.</p>
+  <h2>Click below to get started!</h2>
+  <%= link_to "Find Jobs", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "List Jobs", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
