--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,15 @@
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="listing_form">
+        <%= render 'shared/listing_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1>Welcome to Vegas Volunteer</h1>
 
@@ -5,3 +17,5 @@
   <%= link_to "Find Jobs", '#', class: "btn btn-lg btn-primary" %>
   <%= link_to "List Jobs", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+
+<% end %>
