--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,13 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.listings.any? %>
+      <h3>Listings (<%= @user.listings.count %>)</h3>
+      <ol class="listings">
+        <%= render @listings %>
+      </ol>
+      <%= will_paginate @listings %>
+    <% end %>
+  </div>
 </div>
