--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
 <% if logged_in? %>
+<div class="center jumbotron">
+  <h1>Welcome to Vegas Volunteer</h1>
+
+  <h2>Click below to get started!</h2>
+  <%= link_to "Find Jobs", listings_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "List Jobs", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
   <div class="row">
     <aside class="col-md-4">
       <section class="user_info">
@@ -14,8 +21,7 @@
   <h1>Welcome to Vegas Volunteer</h1>
 
   <h2>Click below to get started!</h2>
-  <%= link_to "Find Jobs", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Find Jobs", listings_path, class: "btn btn-lg btn-primary" %>
   <%= link_to "List Jobs", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
-
-<% end %>
+<% end %>  
