--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,6 +19,9 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <br/>
+      <%= link_to "Log In", login_path, id: "loginlink" %>
+      
     <% end %>
   </div>
 </div>
