--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,8 +1,14 @@
-<li id="listing-<%= listing.id %>">
+<li id="<%= listing.id %>">
   <%= link_to gravatar_for(listing.user, size: 50), listing.user %>
   <span class="user"><%= link_to listing.user.name, listing.user %></span>
-  <span class="content"><%= listing.content %></span>
+  <span class="content">
+    <%= listing.content %>
+  </span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(listing.created_at) %> ago.
+    <% if current_user?(listing.user) %>
+      <%= link_to "delete", listing, method: :delete,
+                                       data: { confirm: "You sure?" } %>
+    <% end %>
   </span>
 </li>
