--- a/app/views/shared/_listing.html.erb
+++ b/app/views/shared/_listing.html.erb
@@ -1,7 +1,11 @@
-
+<li id="listing-<%= listing.id %>">
   <%= link_to gravatar_for(listing.user, size: 50), listing.user %>
   <span class="user"><%= link_to listing.user.name, listing.user %></span>
   <span class="content"><%= listing.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(listing.created_at) %> ago.
+      <%= link_to "delete", listing, method: :delete,
+                                     data: { confirm: "Are you sure?" } %>
+      <% end %>
   </span>
+</li>
