--- a/app/views/shared/_listing_form.html.erb
+++ b/app/views/shared/_listing_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for(@listing) do |f| %>
+<%= form_for(@listing, html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new listing..." %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
+
