--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,6 +15,10 @@
         <%= render 'shared/listing_form' %>
       </section>
     </aside>
+    <div class="col-md-8 listings">
+      <h3>Jobs Listed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
 <div class="center jumbotron">
