--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -237,6 +237,14 @@ input {
       padding: 5px 0;
     }
   }
+
+  .title {
+    display: block;
+    margin-left: 60px;
+    font-weight: bold;
+    font-size: 1.1em;
+  }
+
   .timestamp {
     color: $gray-light;
     display: block;
