--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
+<body>
 <% if logged_in? %>
 <div class="center jumbotron">
   <h1>Welcome to Vegas Volunteer</h1>
-
   <h2>Click below to get started!</h2>
   <%= link_to "Find Jobs", listings_path, class: "btn btn-lg btn-primary" %>
   <%= link_to "List Jobs", signup_path, class: "btn btn-lg btn-primary" %>
@@ -29,3 +29,4 @@
   <%= link_to "List Jobs", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 <% end %>  
+</body>
