--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,7 +15,7 @@ $gray-medium-light: #eaeaea;
 
 body {
   padding-top: 60px;
-  background: url(/assets/home_background.jpg);
+  background: image-url("home_background.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -110,15 +110,12 @@ p {
 }
 
 .jumbotron {
-  background: url(/assets/background.jpg);
+  background: image-url("background.jpg");
    background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-.home-container {
-  background: url(/assets/background.jpg)
-}
 
 /* footer */
 
