--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,7 +15,7 @@ $gray-medium-light: #eaeaea;
 
 body {
   padding-top: 60px;
-  background: image-url("home_background.jpg");
+  background: image-url("home_background.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -110,7 +110,7 @@ p {
 }
 
 .jumbotron {
-  background: image-url("background.jpg");
+  background: image-url("background.png");
    background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
